--- a/modules/role/partials/role-edit.html
+++ b/modules/role/partials/role-edit.html
@@ -1,4 +1,4 @@
-<div class="pcoded-content" ng-init="getrole();">
+<div class="pcoded-content">
     <div class="pcoded-inner-content">
         <div class="main-body">
             <div class="page-wrapper">
