--- a/modules/role/partials/role-list.html
+++ b/modules/role/partials/role-list.html
@@ -44,7 +44,7 @@
       											            <td>
                   												<i class="fa fa-info-circle" data-toggle="modal" data-target="#view-details" ng-click="getPermission($index)"></i>
                   												<a href="#/role/edit/{{role.rm_id}}"><i class="fa fa-pencil"></i></a>
-                  												<i class="fa fa-trash" data-toggle="modal" data-target="#confirm-delete" ng-click="deleteRole(role.rm_id)"></i>
+                  												<i class="fa fa-trash" id='trash' data-toggle="modal" data-target="#confirm-delete" ng-click="deleteRole(role.rm_id)"></i>
                   											</td>
           						                </tr>
           						            </tbody>
